--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "xml2js": "^0.6.2"
   },
